<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spa</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Create_account">Don\'t have an account? Create Account</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <!-- <item>Profile</item> -->
        <item>Find Spa</item>
        <!-- <item>Make Appointment</item> -->
        <item>View Appointment</item>
        <item>Notifications</item>
        <item>Send Gift Card</item>
        <!-- <item>Favourites</item> -->
        <item>Offers</item>
        <item>Wishlist</item>
         <item>Contact Sync</item>
        <!-- <item>Settings</item> -->
        <!-- <item>Logout</item> -->
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <!-- <item>@drawable/ic_profile</item> -->
        <item>@drawable/ic_find_spa</item>
        <!-- <item>@drawable/ic_make_appointment</item> -->
        <item>@drawable/ic_view_appointment</item>
        <item>@drawable/ic_notification</item>
        <item>@drawable/ic_send_gift_card</item>
        <!-- <item>@drawable/ic_favourites</item> -->
        <item>@drawable/ic_offers</item>
        <item>@drawable/wishlist_icon</item>
        <!-- <item>@drawable/ic_settings</item> -->
        <!-- <item>@drawable/ic_logout</item> -->
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_set_therapist">See Your Therapist</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_see_apointment">See Apointment</string>
    <string name="title_activity_send_feedback">Send Feedback</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_spa_profile">SpaProfileActivity</string>

    <!-- Content Description -->
    <string name="General_Setting">General Setting</string>
    <string name="Social_Setting">Social Setting</string>
    <string name="Sopport_Feedback">Sopport And Feedback</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_setting__fragment">Setting_Fragment</string>
    <string name="Email_Notification">Email Notification</string>
    <string name="Current_Email">Current Email</string>
    <string name="Facebook_Sync">Facebook Sync</string>
    <string name="Google_plus">Google + Sync</string>
    <string name="Twitter_Sync">Twitter Sync</string>
    <string name="Information_And_Support">Information And Support</string>
    <string name="PushNotification">Push Notification</string>
    <string name="Notification">Notification</string>
    <string name="Vibrate">Vibrate</string>
    <string name="Ringtone">Ringtone</string>
    <string name="Light">Light</string>
    <string name="About_Us">About Us</string>
    <string name="Terms_Of_Use">Terms Of Use</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Feedback">Feedback</string>
    <string name="Send_Us_Feedback">Send Us Feedback</string>
    <string name="Share_This_App">Share This App</string>
    <string name="Rate_This_App">Rate This App</string>
    <string name="title_activity_send__feed_back">Send Feedback</string>
    <string name="Send_Feedback">Send Feedback</string>
    <string name="Contact_Sync">Contact Sync</string>
     <string name="Personal_Info">Personal Information</string>

     
     
     
    <string-array name="facebook_array">
    	<item>User Profile</item>
    	<item>Post Message</item>
    	<item>Friends</item>
    	<item>Get Feeds</item>
    	<item>Upload Image</item>
    	<item>Get Albums</item>
    	<item>Update Story</item>
    	<item>Close Dialog</item>
    </string-array>
    <string-array name="twitter_array">
    	<item>User Profile</item>
    	<item>Send Tweet</item>
    	<item>Friends</item>
    	<item>Get Feeds</item>
    	<item>Upload Image</item>
    	<item>Get Albums</item>
    	<item>Close Dialog</item>
    </string-array>		
    <string-array name="linkedin_array">
    	<item>User Profile</item>
    	<item>Post an Update</item>
    	<item>Friends</item>
    	<item>Get Feeds</item>
    	<item>Career</item>
    	<item>Close Dialog</item>
    </string-array>	
    <string-array name="myspace_array">
    	<item>User Profile</item>
    	<item>Post an Update</item>
    	<item>Friends</item>
    	<item>Close Dialog</item>
    </string-array>	
    <string-array name="yahoo_array">
    	<item>User Profile</item>
    	<item>Post an Update</item>
    	<item>Friends</item>
    	<item>Close Dialog</item>
    </string-array>	
    <string-array name="yammer_array">
    	<item>User Profile</item>
    	<item>Post an Update</item>
    	<item>Contacts</item>
    	<item>Close Dialog</item>
    </string-array>	
    <string-array name="googleplus_array">
    	<item>User Profile</item>
    	<item>Friends</item>
    	<item>Get Feeds</item>
    	<item>Get Albums</item>
    	<item>Close Dialog</item>
    </string-array>
    <string-array name="google_array">
    	<item>User Profile</item>
    	<item>Friends</item>
    	<item>Close Dialog</item>
    </string-array>	
    <string-array name="foursquare_array">
    	<item>User Profile</item>
    	<item>Contacts</item>
    	<item>Close Dialog</item>
    </string-array>	
    <string-array name="flickr_array">
    	<item>User Profile</item>
    	<item>Contacts</item>
    	<item>Close Dialog</item>
    </string-array>
    <string-array name="instagram_array">
    	<item>User Profile</item>
    	<item>Contacts</item>
    	<item>Get Feeds</item>
    	<item>Close Dialog</item>
    </string-array>
    <string-array name="salesforce_array">
    	<item>User Profile</item>
    	<item>Close Dialog</item>
    </string-array>
    <string-array name="runkeeper_array">
    	<item>User Profile</item>
    	<item>Close Dialog</item>
    </string-array>
    <string-array name="drawable_array">
    	<item>share</item>
    	<item>profile</item>
    	<item>contacts</item>
    	<item>feeds</item>
    	<item>image</item>
    	<item>albums</item>
    	<item>notepad</item>
    	<item>close</item>
    </string-array>
</resources>