<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efece9" >

        <LinearLayout
            android:id="@+id/General_Setting_Main_Wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drop_sawdow_bk"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/RelativeLayout04"
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:background="#ffffff" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RelativeLayout03"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/First_Header_Style"
                    android:layout_centerVertical="true" >

                    <TextView
                        android:id="@+id/TextView06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Information_And_Support"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4e3115" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Text_Content"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp" >

                        <TextView
                            android:id="@+id/TextView02"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="17dp"
                            android:text="@string/About_Us" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="#a6988a" >
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" >

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="16dp"
                            android:text="@string/Terms_Of_Use" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="#a6988a" >
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" >

                        <TextView
                            android:id="@+id/TextView03"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="16dp"
                            android:text="@string/Privacy_Policy" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drop_sawdow_bk"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/RelativeLayout02"
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:background="#ffffff" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RelativeLayout01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/First_Header_Style"
                    android:layout_centerVertical="true" >

                    <TextView
                        android:id="@+id/TextView05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Feedback"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#4e3115" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Text_Content"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp" >

                        <ImageView
                            android:id="@+id/Image_Controller_Send_Feedback"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/send_feedback" />

                        <TextView
                            android:id="@+id/Textview_Controller_Send_Feedback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@+id/Image_Controller_Send_Feedback"
                            android:text="@string/Send_Us_Feedback" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="#a6988a" >
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" >

                        <ImageView
                            android:id="@+id/Image_View_Share_App"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/share_app" />

                        <TextView
                            android:id="@+id/Text_View_Share_App"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@+id/Image_View_Share_App"
                            android:text="@string/Share_This_App" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="#a6988a" >
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" >

                        <ImageView
                            android:id="@+id/Image_View_Rate_App"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/reate_app" />

                        <TextView
                            android:id="@+id/Text_View_Rate_App"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="20dp"
                            android:layout_toRightOf="@+id/Image_View_Rate_App"
                            android:text="@string/Rate_This_App" />

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>