<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="95dp"
        android:background="#efece9" >

        <LinearLayout
            android:id="@+id/General_Setting_Main_Wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/drop_sawdow_bk"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/RelativeLayout02"
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:background="#ffffff" >
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/RelativeLayout01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/First_Header_Style"
                    android:layout_centerVertical="true" >
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Text_Content"
                    android:orientation="vertical" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp" >

                        <ImageView
                            android:id="@+id/ImageView06"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/facebook_sync" />

                        <Switch
                            android:id="@+id/Switch_Controller_Push_Noti_Notify"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp" />

                        <TextView
                            android:id="@+id/TextView08"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="17dp"
                            android:layout_toRightOf="@+id/ImageView06"
                            android:text="@string/Facebook_Sync" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="#a6988a" >
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" >

                        <ImageView
                            android:id="@+id/ImageView04"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/google_sync" />

                        <Switch
                            android:id="@+id/Switch05"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp" />

                        <TextView
                            android:id="@+id/TextView04"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="16dp"
                            android:layout_toRightOf="@+id/ImageView04"
                            android:text="@string/Google_plus" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:background="#a6988a" >
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp" >

                        <ImageView
                            android:id="@+id/ImageView07"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginLeft="10dp"
                            android:src="@drawable/twitter_sync" />

                        <Switch
                            android:id="@+id/Switch06"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp" />

                        <TextView
                            android:id="@+id/TextView07"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="16dp"
                            android:layout_toRightOf="@+id/ImageView07"
                            android:text="@string/Twitter_Sync" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>